<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0000BCD4"
    android:foregroundTint="@color/purple_200"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/gridLayout"
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginTop="2dp"
        android:clickable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <EditText
            android:id="@+id/MassInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="199dp"
            android:ems="10"
            android:hint="@string/your_mass"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            app:layout_column="0"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            app:layout_row="3" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="336dp"
            android:text="@string/textview"
            app:layout_column="0"
            app:layout_constraintBottom_toTopOf="@+id/HeightInput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/MassInput"
            app:layout_constraintTop_toBottomOf="@+id/MassInput"
            app:layout_row="4" />

        <TextView
            android:id="@+id/HeightInch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="336dp"
            android:text="@string/height"
            app:layout_column="0"
            app:layout_constraintBottom_toTopOf="@+id/HeightInput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/MassInput"
            app:layout_constraintTop_toBottomOf="@+id/MassInput"
            app:layout_constraintVertical_bias="0.333"
            app:layout_row="4" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="336dp"
            android:text="@string/mass"
            app:layout_column="0"
            app:layout_constraintBottom_toTopOf="@+id/HeightInput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline5"
            app:layout_row="2" />

        <TextView
            android:id="@+id/MassLb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="336dp"
            android:text="@string/mass2"
            app:layout_column="0"
            app:layout_constraintBottom_toTopOf="@+id/HeightInput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline5"
            app:layout_row="2" />

        <EditText
            android:id="@+id/HeightInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="199dp"
            android:ems="10"
            android:hint="@string/your_height"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            app:layout_column="0"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/button"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_row="5" />

        <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:text="@string/count"
            app:layout_column="0"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/HeightInput"
            app:layout_row="6" />

        <TextView
            android:id="@+id/BMIRes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contextClickable="true"
            android:paddingStart="160dp"
            android:paddingTop="50dp"
            android:text="@string/bmi"
            android:textSize="24sp"
            app:layout_column="0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button"
            app:layout_row="7" />

        <EditText
            android:id="@+id/help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Name"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/BMIRes" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>